--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxt/image": "^1.9.0",
     "@nuxtjs/device": "^3.2.4",
     "@pinia/nuxt": "^0.9.0",
+    "@stripe/stripe-js": "^5.10.0",
     "@tailwindcss/vite": "^4.0.4",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.4",
     "@types/node": "^22.13.1",
+    "@types/stripe-v3": "^3.1.33",
     "@types/swiper": "^5.4.3",
     "@types/vue-tel-input": "^2.1.7",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
