--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pinia/nuxt": "^0.9.0",
     "@stripe/stripe-js": "^5.10.0",
     "@tailwindcss/vite": "^4.0.4",
+    "@vuepic/vue-datepicker": "^11.0.2",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "nuxt": "^3.15.3",
