--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tailwindcss/vite": "^4.0.4",
     "@vuepic/vue-datepicker": "^11.0.2",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "nuxt": "^3.15.3",
     "nuxt-swiper": "^2.0.0",
